force-app/main/default/objects/RUCA__c/RUCA__c.object-meta.xml
<CustomObject>
    <label>RUCA</label>
    <nameField>
        <label>RUCA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RUCAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>