force-app/main/default/objects/RUCA__c/fields/RUCA1__c.field-meta.xml
<CustomField>
    <fullName>RUCA1__c</fullName>
    <label>RUCA1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>