force-app/main/default/objects/RUCA__c/fields/RUCA2__c.field-meta.xml
<CustomField>
    <fullName>RUCA2__c</fullName>
    <label>RUCA2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>