force-app/main/default/objects/RUCA__c/fields/RUCA_Original_Description__c.field-meta.xml
<CustomField>
    <fullName>RUCA_Original_Description__c</fullName>
    <label>RUCA Original Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>