force-app/main/default/objects/RUCA__c/fields/ZIP_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZIP_CODE__c</fullName>
    <label>ZIP_CODE</label>
    <length>16</length>
    <type>Text</type>
</CustomField>